--- a/index.html
+++ b/index.html
@@ -5,16 +5,22 @@
 
 
 	<!-- color palette : 
-	style="color:#5b7290;"
-	style="color:#b1bdcd;"
-	style="color:#e7ebf0;"
-	style="color:#003366;"
-	style="color:#660f57;"
-	style="color:#663366;"
+	#5b7290
+	#b1bdcd
+	#e7ebf0
+	#003366
+	#660f57
+	#663366
 	-->
 	
 	<body class = "" bgcolor="#663366">
- 
+	
+		<div class="row">		
+		</div>
+		<div class="center">
+		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a>
+		</div>
+		
 	</body>
 
 </html>
