--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,9 +1,13 @@
-<nav>
-    <div bgcolor="#663366" class="nav-wrapper">
+<nav style="background-color:#660f57;>
+    <div class="nav-wrapper">
       <a href="/" class="brand-logo center">Cosmic Comics </a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a class="" href="/">﹝Home﹞</a></li>
         <li><a class="" href="sign-in">﹝Comic﹞</a></li>
+		<li><a class="" href="/test">﹝test﹞</a></li>
+      </ul>
+	  <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a></li>
       </ul>
     </div>
   </nav>
