--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 
 
 	<!-- color palette : 
-	#5b7290
-	#b1bdcd
-	#e7ebf0
-	#003366
-	#660f57
-	#663366
+	#5b7290 Dark Gray
+	#b1bdcd Gray
+	#e7ebf0 Ligjt Gray
+	#003366 Dark Blue
+	#660f57 Deep Purple
+	#663366 Purple
 	-->
 	
 	<body class = "" bgcolor="#663366">
@@ -19,6 +19,15 @@
 		</div>
 		<div class="center">
 		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a>
+		</div>
+		
+		<div class="container">
+			<div = class="row">
+			
+				<div style="background-color:#660f57; class="col s1">1</div>
+			
+			<div>
+			
 		</div>
 		
 	</body>
