--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,6 +1,13 @@
 <nav style="background-color:#660f57;>
     <div class="nav-wrapper">
-      <a href="/" class="brand-logo center">Cosmic Comics </a>
+	
+	<style>
+	body {
+    font-family: 'Sofia';font-size: 22px;
+	}
+	</style>
+	
+      <a href="/"  class="brand-logo center">Cosmic Comics </a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a class="" href="/">﹝Home﹞</a></li>
         <li><a class="" href="sign-in">﹝Comic﹞</a></li>
