--- a/Shared/header.html
+++ b/Shared/header.html
@@ -1,10 +1,19 @@
 <head>
 	<title> Cosmic Comics </title>
+	
+	
+	
+	
+	
+	
 		<!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+
+
+	<link href='https://fonts.googleapis.com/css?family=Fredericka the Great' rel='stylesheet'>
 	
 </head>
