--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -7,11 +7,11 @@
 	}
 	</style>
 	
-      <a href="/"  class="brand-logo center">Cosmic Comics </a>
+      <a href="/"  class="brand-logo center"><font face="Luckiest Guy" color="#c5bfff"> Cosmic Comics </font></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a class="" href="/">﹝Home﹞</a></li>
-        <li><a class="" href="sign-in">﹝Comic﹞</a></li>
-		<li><a class="" href="/test">﹝test﹞</a></li>
+        <li><a class="" href="/"><font face="Luckiest Guy" color="#c5bfff">﹝Home﹞</font></a></li>
+        <li><a class="" href="sign-in"><font face="Luckiest Guy" color="#c5bfff">﹝Comic﹞</font></a></li>
+		<li><a class="" href="/test"><font face="Luckiest Guy" color="#c5bfff">﹝test﹞</font></a></li>
       </ul>
 	  <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a></li>
