--- a/Shared/header.html
+++ b/Shared/header.html
@@ -14,6 +14,6 @@
 
 
 
-	<link href='https://fonts.googleapis.com/css?family=Fredericka the Great' rel='stylesheet'>
+	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
 	
 </head>
