--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
 	
 		<div class="row">		
 		</div>
-		<div class="center">
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a>
-		</div>
+
 		
-		<div class="container">
+		<div class="">
 			<div = class="row">
 			
-				<div style="background-color:#660f57; class="col s1">1</div>
-			
+				<div style="background-color:#5b7290;" class="col offset-s1 s10 z-depth-3 "> featured comics </div>
+				
 			<div>
 			
 		</div>
