--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -5,7 +5,7 @@
       <a href="/"  class="brand-logo center"><font face="Luckiest Guy" color="#c5bfff"> Cosmic Comics </font></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
         <li><a class="" href="/"><font face="Luckiest Guy" color="#c5bfff">﹝Home﹞</font></a></li>
-        <li><a class="" href="sign-in"><font face="Luckiest Guy" color="#c5bfff">﹝Comic﹞</font></a></li>
+        <li><a class="" href="/comic"><font face="Luckiest Guy" color="#c5bfff">﹝Comic﹞</font></a></li>
 		<li><a class="" href="/test"><font face="Luckiest Guy" color="#c5bfff">﹝test﹞</font></a></li>
       </ul>
 	  <ul id="nav-mobile" class="right hide-on-med-and-down">
