--- a/comic-success.html
+++ b/comic-success.html
@@ -21,7 +21,7 @@
 					<h2 class="header white-text "><font face="Luckiest Guy">{{comics.name}}</font></h2>
 					<div class="card horizontal">
 						<div class="card-image z-depth-1">
-							<img style="width:280px; height:280px;	" src="/pictures/{{comics.comic_cover}}">
+							<img src="/pictures/{{comics.comic_cover}}">
 						</div>
 					<div class="card-stacked">
 						<div  style="backgrond-color:#e7ebf0" class="card-content black-text">
