--- a/test.html
+++ b/test.html
@@ -4,19 +4,8 @@
 	% include('shared/navbar.html')
 
 
-	<body background="/pictures/cosmic.jpg" bgcolor="#663366">
+	<body style=" background-position: 50% 0% ; background-repeat: no-repeat ; background-size: auto;"  background="/pictures/cosmic.jpg" bgcolor="#663366">
 	
-		<div class="row">
-		</div>
-		<div class="row">		
-		</div>	
-		<div class="row">
-		</div>
-		<center>
-		<img src="/pictures/cosmic.jpg">
-		</center>
-		<div class="row">
-		</div>
 
 
 </html>
