--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	% include('shared/navbar.html')
 
 
-	<body style=" background-position: 50% 0% ; background-repeat: no-repeat ; background-size: auto;"  background="/pictures/cosmic.jpg" bgcolor="#663366">
+	<body style=" background-position: 50% 0% ; background-repeat: no-repeat ; background-size: 150%;"  background="/pictures/cosmic.jpg" bgcolor="#663366">
 	
 
 
