--- a/test.html
+++ b/test.html
@@ -6,6 +6,7 @@
 
 	<body style=" background-position: 50% 0% ; background-repeat: no-repeat ; background-size: 150%;"  background="/pictures/cosmic.jpg" bgcolor="#663366">
 	
+	
 
-
+	</body>
 </html>
