--- a/Shared/navbar.html
+++ b/Shared/navbar.html
@@ -1,12 +1,12 @@
-<nav style="background-color:#660f57;>
+<nav style="background-color:#660f57;opacity:.7;">
     <div class="nav-wrapper">
 	
 	
-      <a href="/"  class="brand-logo center"><font face="Luckiest Guy" color="#c5bfff"> Cosmic Comics </font></a>
+      <a href="/"  class="brand-logo center"><font face="Luckiest Guy" size="24px" color="#c5bfff"> Cosmic Comics </font></a>
       <ul id="nav-mobile" class="left hide-on-med-and-down">
-        <li><a class="" href="/"><font face="Luckiest Guy" color="#c5bfff">﹝Home﹞</font></a></li>
-        <li><a class="" href="/comic"><font face="Luckiest Guy" color="#c5bfff">﹝Comic﹞</font></a></li>
-		<li><a class="" href="/test"><font face="Luckiest Guy" color="#c5bfff">﹝test﹞</font></a></li>
+        <li><a class="" href="/"><font face="Luckiest Guy" size="4px" color="#c5bfff">﹝Home﹞</font></a></li>
+        <li><a class="" href="/comic"><font face="Luckiest Guy" size="4px" color="#c5bfff">﹝Comic﹞</font></a></li>
+		<li><a class="" href="/test"><font face="Luckiest Guy" size="4px" color="#c5bfff">﹝test﹞</font></a></li>
       </ul>
 	  <ul id="nav-mobile" class="right hide-on-med-and-down">
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>Click</button></a></li>
