--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 
 	<body style=" background-position: 50% 0% ; background-repeat: no-repeat ; background-size: 150%;"  background="/pictures/cosmic.jpg" bgcolor="#663366">
 	
+	<iframe style="height:200px;width:300px;border:none;" src="https://play.pokemonshowdown.com/"></iframe>
 	
-
 	</body>
 </html>
