--- a/Shared/header.html
+++ b/Shared/header.html
@@ -12,7 +12,7 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
-
+	<link rel="icon" href="/pictures/icon.png">
 
 	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
 	
