--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			<div = class="row">
 			
 				<div style="background-color:#5b7290;" class="col offset-s1 s10 z-depth-3 "> featured comics </div>
+				<div class="row"></div>
+				<div class="center"><img src="/pictures/ribbon-black.png"></div>
 				
 			<div>
 			
