--- a/Shared/footer.html
+++ b/Shared/footer.html
@@ -2,8 +2,7 @@
           <div class="container">
             <div class="row">
               <div class="col 16 s12">
-                <h5 class="white-text">The End</h5>
-                <p class="grey-text text-lighten-4">is near...</p>
+                <h5> Fus Ro Dah </h5>
               </div>
             </div>
           </div>
