--- a/Shared/header.html
+++ b/Shared/header.html
@@ -12,8 +12,12 @@
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
+	<!-- Icon -->
 	<link rel="icon" href="/pictures/icon.png">
 
-	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet">
+
+	<!-- Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Luckiest+Guy" rel="stylesheet"> <!-- Luckiest Guy -->
+	<link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet"> <!-- Tillana -->
 	
 </head>
