--- a/Shared/footer.html
+++ b/Shared/footer.html
@@ -1,4 +1,6 @@
-	<footer style="background-color:#660f57;opacity:.7;" class="page-footer">
+
+	<footer style="background-color:#660f57;opacity:.7;" class="page-footer footer">
+	
           <div class="container">
             <div class="row">
               <div class="col 16 s12">
