--- a/Shared/header.html
+++ b/Shared/header.html
@@ -2,7 +2,17 @@
 	<title> Cosmic Comics </title>
 	
 	
-	
+	<style>
+		.footer {
+		position: fixed;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		background-color: red;
+		color: white;
+		text-align: center;
+		}
+	</style>
 	
 	
 	
